Update PageIndex.java